# renku-data-services

./: .dockerignore  .gitignore  .local_env  .pre-commit-config.yaml  CONTRIBUTING.md  DEVELOPING.md  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  ams.json  chartpress.yaml  ci-values.yaml  flake.nix  kind_config.yaml  pod.json  pods.json  pods2.json  pvcs.json  pyproject.toml  query.org  registries.yaml  rrl.sql  rrl_data.sql  server_options.json  setup-k3d-cluster.sh  workspace.toml
.devcontainer/: devcontainer.json  docker-compose.override.yml.example  docker-compose.yml  generate_ulid_func.sql
.devcontainer/fix-yarnpkg/: devcontainer-feature.json  install.sh
.devcontainer/k3d/: devcontainer-feature.json  install.sh
.devcontainer/kpack/: clusterstore.yaml  python-builder.yaml
.devcontainer/rclone/: devcontainer-feature.json  install.sh
.devcontainer/solr/: devcontainer-feature.json  install.sh
.github/: CODEOWNERS  dependabot.yml
.github/pull_request_template/: bugfix.md  feature.md
.github/workflows/: acceptance-tests.yml  save_cache.yml  test_publish.yml  tests.yml
backend/: .dockerignore  .pre-commit-config.yaml  CONTRIBUTING.md  DEVELOPING.md  README.md  registries.yaml  server_defaults.json
backend/.github/workflows/: save_cache.yml  test_publish.yml
backend/helm-chart/renku-data-services/: Chart.yaml
backend/projects/k8s_watcher/: pyproject.toml
backend/projects/renku_data_service/: Dockerfile
backend/projects/renku_data_tasks/: Dockerfile
backend/projects/secrets_storage/: Dockerfile
backend/test/bases/: __init__.py
bases/renku_data_services/background_jobs/: __init__.py  config.py  core.py  dependencies.py  main.py  utils.py
bases/renku_data_services/crc_api/: app.py  auth.py  config.py  error_handler.py  main.py  server_options.py
bases/renku_data_services/data_api/: __init__.py  app.py  config.py  dependencies.py  main.py  my_patch.py  playing.py  posthog.py  prometheus.py  server_options.py
bases/renku_data_services/data_tasks/: __init__.py  config.py  dependencies.py  main.py  task_defs.py  taskman.py  tcp_handler.py
bases/renku_data_services/k8s_cache/: __init__.py  config.py  dependencies.py  main.py
bases/renku_data_services/keycloak_sync/: config.py  db.py  main.py
bases/renku_data_services/mcp_api/: README.md  __init__.py  dependencies.py  main.py  server.py
bases/renku_data_services/secrets_storage_api/: __init__.py  app.py  config.py  dependencies.py  main.py
bases/renku_data_services/storage_api/: __init__.py  app.py  config.py  core.py  main.py
bases/secret_storage/data_api/: __init__.py  app.py  main.py
common/v1/: headers.avsc  visibility.avsc
components/renku_data_services/activitypub/: __init__.py  api.spec.yaml  apispec.py  blueprints.py  core.py  db.py  models.py  orm.py
components/renku_data_services/app_config/: __init__.py  config.py  logging.py
components/renku_data_services/authn/: chained.py  dummy.py  gitlab.py  keycloak.py  renku.py
components/renku_data_services/authz/: admin_sync.py  authz.py  config.py  models.py  orm.py  schemas.py
components/renku_data_services/authz_migrations/: __init__.py  env.py
components/renku_data_services/base_api/: README.md  auth.py  blueprint.py  error_handler.py  etag.py  misc.py  pagination.py
components/renku_data_services/base_blueprints/: __init__.py
components/renku_data_services/base_models/: README.md  __init__.py  bytesize.py  core.py  metrics.py  nel.py  response.py  validation.py
components/renku_data_services/base_orm/: declarative_base.py  registry.py
components/renku_data_services/capacity_reservation/: __init__.py  api.spec.yaml  apispec.py  apispec_base.py  blueprints.py  core.py  db.py  k8s_client.py  models.py  orm.py  tasks.py
components/renku_data_services/config/: __init__.py  config.py
components/renku_data_services/connected_services/: api.spec.yaml  apispec.py  apispec.yaml  apispec_base.py  apispec_extras.py  blueprints.py  core.py  db.py  dummy_async_oauth2_client.py  external_models.py  models.py  oauth_http.py  orm.py  provider_adapters.py  utils.py
components/renku_data_services/crc/: __init__.py  api.spec.yaml  apispec.py  apispec_base.py  blueprints.py  core.py  (+5 more)
components/renku_pack_builder/: .dockerignore  .gitignore  Dockerfile  Makefile  go.mod  go.sum  main.go
helm-chart/renku-data-services/: Chart.yaml  values.yaml
helm-chart/secret-storage/: Chart.yaml  values.yaml
helm-chart/secrets-storage/: Chart.yaml  values.yaml
k6-test/: script.js
migrations/: env.py
migrations/versions/: 953b7ca598bb_create_tables.py  b877fc8fb058_create_tables.py  defdf04584a3_create_tables.py  f52872eca13f_create_tables.py
project/v1/: asyncapi.yaml
projects/background_jobs/: Dockerfile  pyproject.toml
projects/k8s_watcher/: Dockerfile  pyproject.toml
projects/keycloak_sync/: Dockerfile  pyproject.toml
projects/renku_crc/: Dockerfile  pyproject.toml
projects/renku_data/: Dockerfile  pyproject.toml
projects/renku_data_service/: Dockerfile  pyproject.toml
projects/renku_data_tasks/: Dockerfile  pyproject.toml
projects/renku_mcp_server/: Dockerfile  pyproject.toml
projects/renku_storage/: Dockerfile  pyproject.toml
projects/secret_storage/: Dockerfile  pyproject.toml
projects/secrets_storage/: Dockerfile  pyproject.toml
session_image/: Dockerfile  jupyter_server_config.py
src/: __init__.py  api.spec.yaml
src/crack/: __init__.py  app.py
src/db/: adapter.py  alembic.ini  schemas.py
src/k8s/: __init__.py  client_interfaces.py  clients.py  quota.py
src/models/: __init__.py  crac.py  crc.py  errors.py
src/renku_crac/: api.spec.yaml  app.py  auth.py  blueprint.py  config.py  error_handler.py  main.py
src/renku_crack/: app.py
src/renku_crc/: __init__.py  api.spec.yaml  app.py  auth.py  blueprint.py  config.py  error_handler.py  main.py  server_options.py
src/schemas/: __init__.py  apispec.py  query_parameters.py
src/users/: __init__.py  credentials.py  dummy.py  keycloak.py
test/: conftest.py  constants.py  utils.py
tests/: conftest.py
user/v1/: asyncapi.yaml
(+1049 files in other folders)
