[project]
name = "renku-data-services"
version = "0.0.1"
description = "Collection of services that deal with data in Postgres."
authors = [
  { name = "Swiss Data Science Center", email = "contact@datascience.ch" },
]
readme = "README.md"
license = "Apache License 2.0"
requires-python = ">=3.13"
dynamic = ["dependencies"]

[tool.poetry]
packages = [
  { include = "renku_data_services/data_api", from = "bases" },
  { include = "renku_data_services/data_tasks", from = "bases" },
  { include = "renku_data_services/authn", from = "components" },
  { include = "renku_data_services/db_config", from = "components" },
  { include = "renku_data_services/app_config", from = "components" },
  { include = "renku_data_services/authz", from = "components" },
  { include = "renku_data_services/crc", from = "components" },
  { include = "renku_data_services/k8s", from = "components" },
  { include = "renku_data_services/migrations", from = "components" },
  { include = "renku_data_services/errors", from = "components" },
  { include = "renku_data_services/base_models", from = "components" },
  { include = "renku_data_services/base_api", from = "components" },
  { include = "renku_data_services/storage", from = "components" },
  { include = "renku_data_services/utils", from = "components" },
  { include = "renku_data_services/git", from = "components" },
  { include = "renku_data_services/users", from = "components" },
  { include = "renku_data_services/project", from = "components" },
  { include = "renku_data_services/message_queue", from = "components" },
  { include = "renku_data_services/namespace", from = "components" },
  { include = "renku_data_services/session", from = "components" },
  { include = "renku_data_services/message_queue", from = "components" },
  { include = "renku_data_services/secrets", from = "components" },
  { include = "renku_data_services/connected_services", from = "components" },
  { include = "renku_data_services/repositories", from = "components" },
  { include = "renku_data_services/notebooks", from = "components" },
  { include = "renku_data_services/platform", from = "components" },
  { include = "renku_data_services/data_connectors", from = "components" },
  { include = "renku_data_services/solr", from = "components" },
  { include = "renku_data_services/search", from = "components" },
  { include = "renku_data_services/metrics", from = "components" },
]

[tool.poetry.dependencies]
python = "^3.13"
sanic = { extras = ["ext"], version = "^24.12.0" }
pydantic = { extras = ["email"], version = "^2.10.6" }
datamodel-code-generator = "^0.28.4"
sqlalchemy = { extras = ["asyncio"], version = "^2.0.38" }
alembic = "^1.14.1"
asyncpg = "^0.30.0"
pyjwt = { extras = ["crypto"], version = "^2.10.1" }
tenacity = "^9.0.0"
httpx = "<0.29"
kubernetes = "^31.0.0"
python-ulid = "^3.0.0"
python-gitlab = "^5.6.0"
psycopg = { version = "^3.2.3", extras = ["binary"] }
urllib3 = "^2.3.0"
deepmerge = "^2.0"
authlib = "^1.5.0"
undictify = "^0.11.3"
prometheus-sanic = "^3.0.0"
prometheus_client = "^0.7.1"
kubernetes-asyncio = "^32.0.0"
marshmallow = "^3.26.1"
escapism = "^1.0.1"
sentry-sdk = { version = "^2.22.0", extras = ["sanic"] }
authzed = "^1.20.0"
cryptography = "^44.0.1"
# see https://github.com/sanic-org/sanic/issues/2828 for setuptools dependency, remove when not needed anymore
setuptools = { version = "^75.8.2" }
kr8s = "^0.20.7"
python-box = "^7.0.1"
werkzeug = "^3.1.3"
toml = "^0.10.2"
aiofiles = "^24.1.0"
# Not a direct dependency, it is needed by authzed. Was causing things to crash at startup beacuse of
# google.protobuf.runtime_version.VersionError:
# Detected incompatible Protobuf Gencode/Runtime versions when loading authzed/api/v1/core.proto: gencode 5.28.2 runtime 5.27.3.
protobuf = "^5.29.3"
poetry = "^2.1.1"
parsy = "^2.1"
sanic-ext = "^24.12.0"
posthog = "^3.21.0"
markdown-code-runner = "^2.2.0"

[tool.poetry.group.dev.dependencies]
bandit = "^1.8.3"
mypy = "~1.15.0"
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
pre-commit = "^4.1.0"
sanic-testing = "^24.6.0"
aiosqlite = "^0.20.0"
types-pyyaml = "^6.0.12.20241230"
schemathesis = "==3.39.7"
pytest-asyncio = "^0.21.2"
pytest-postgresql = "^6.1.1"
types-urllib3 = "^1.26.25.14"
ruff = "^0.8.6"
debugpy = "^1.8.12"
pytest-xdist = { version = "^3.6.1", extras = ["psutil"] }
types-requests = "^2.32.0.20241016"
types-toml = "^0.10.8.20240310"
types-aiofiles = "^24.1.0.20241221"
pytest-mock = "^3.14.0"
uvloop = "^0.21.0"
syrupy = "^4.8.2"
ruamel-yaml = "^0.18.14"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
target-version = "py311"
output-format = "full"
include = ["*.py", "*.pyi"]
exclude = [
  ".devcontainer/",
  "components/renku_data_services/notebooks/cr_amalthea_session.py",
  "components/renku_data_services/notebooks/cr_jupyter_server.py",
  "components/renku_data_services/session/cr_shipwright_buildrun.py",
  "components/renku_data_services/notebooks/oci/image_config.py",
  "components/renku_data_services/notebooks/oci/image_index.py",
  "components/renku_data_services/notebooks/oci/image_manifest.py",
]

[tool.ruff.format]
exclude = ["apispec.py"]

[tool.ruff.lint]
select = [
  # isort
  "I",
  # pydocstyle
  "D",
  # pyflakes
  "F",
  # pycodestyle
  "E",
  "W",
  # pyupgrade
  "UP",
  # flake8-simplify
  "SIM",
  # unused-noqa https://docs.astral.sh/ruff/rules/unused-noqa/
  "RUF100",
  # flake8-bugbear checks are pretty useful
  # https://docs.astral.sh/ruff/rules/#flake8-bugbear-b
  "B",
]
ignore = [
  "D105",
  "D107",
  "D202",
  "D211",
  "D213",
  "D401",
  "E202",
  "E226",
  "E231",
  "UP007",
  "UP038",
]

[tool.ruff.lint.per-file-ignores]
"test/*" = ["D"]
"*/versions/*" = ["D", "E", "W"]
"apispec.py" = ["D", "E", "W", "I", "UP", "F401"]
"components/renku_data_services/notebooks/crs.py" = ["F401"]
"components/renku_data_services/session/crs.py" = ["F401"]

[tool.ruff.lint.isort]
known-first-party = ["renku_data_services", "test"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.bandit]
skips = ["B101", "B603", "B607", "B404"]
exclude_dirs = [
  "test",
  ".devcontainer",
  "components/renku_data_services/notebooks/cr_jupyter_server.py",
  "components/renku_data_services/notebooks/cr_amalthea_session.py",
]

[tool.pytest.ini_options]
addopts = "--cov components/ --cov bases/ --cov-report=term-missing -v"
doctest_optionflags = "ALLOW_UNICODE"
testpaths = ["bases", "components", "test"]
markers = ["integration: mark a test as a integration."]
filterwarnings = [
  "ignore:<class 'pytest_black.BlackItem'> is not using a cooperative constructor:pytest.PytestDeprecationWarning",
  "ignore:distutils Version classes are deprecated. Use packaging.version instead:DeprecationWarning",
]
postgresql_host = "localhost"
postgresql_user = "renku"
postgresql_password = "renku"
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.13"
mypy_path = ["components", "bases"]
files = ["bases/**/*.py", "components/**/*.py"]
namespace_packages = true
explicit_package_bases = true
exclude = ["test"]

pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true

warn_unreachable = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
strict_equality = true
check_untyped_defs = true
allow_redefinition = true
disallow_subclassing_any = true
disallow_untyped_decorators = true
disallow_incomplete_defs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = [
  "renku_data_services.crc.apispec",
  "renku_data_services.connected_services.apispec",
  "renku_data_services.data_connectors.apispec",
  "renku_data_services.storage.apispec",
  "renku_data_services.project.apispec",
  "renku_data_services.repositories.apispec",
  "renku_data_services.secrets.apispec",
  "renku_data_services.session.apispec",
  "renku_data_services.users.apispec",
  "renku_data_services.data_api.error_handler",
  "renku_data_services.namespace.apispec",
  "renku_data_services.notebooks.apispec",
  "renku_data_services.notebooks.cr_amalthea_session",
  "renku_data_services.notebooks.cr_jupyter_server",
  "renku_data_services.platform.apispec",
  "renku_data_services.search.apispec",
]
ignore_errors = true

[[tool.mypy.overrides]]
module = [
  "asyncpg.*",
  "aiofiles.*",
  "authlib.*",
  "authzed.*",
  "deepmerge.*",
  "grpc.*",
  "grpcutil.*",
  "kubernetes.*",
  "kubernetes_asyncio.*",
  "prometheus_client.*",
  "prometheus_sanic.*",
  "sanic_testing.*",
  "undictify.*",
  "urllib3.*",
  "escapism.*",
  "kr8s.*",
  "parsy.*",
  "posthog.*",
  "markdown_code_runner"
]
ignore_missing_imports = true

[tool.coverage.run]
source = ["bases/", "components/"]
omit = ["components/renku_data_services/notebooks"]
concurrency = ["thread", "greenlet"]
