[tool.poetry]
name = "background_jobs"
version = "0.1.0"
description = ""
authors = ['Swiss Data Science Center <contact@datascience.ch>']
license = ""

packages = [
  { include = "renku_data_services/background_jobs", from = "../../bases" },
  { include = "renku_data_services/data_api", from = "../../bases" },
  { include = "renku_data_services/users", from = "../../components" },
  { include = "renku_data_services/errors", from = "../../components" },
  { include = "renku_data_services/base_api", from = "../../components" },
  { include = "renku_data_services/base_models", from = "../../components" },
  { include = "renku_data_services/base_orm", from = "../../components" },
  { include = "renku_data_services/users", from = "../../components" },
  { include = "renku_data_services/base_api", from = "../../components" },
  { include = "renku_data_services/message_queue", from = "../../components" },
  { include = "renku_data_services/db_config", from = "../../components" },
  { include = "renku_data_services/k8s", from = "../../components" },
  { include = "renku_data_services/user_preferences", from = "../../components" },
  { include = "renku_data_services/crc", from = "../../components" },
  { include = "renku_data_services/project", from = "../../components" },
  { include = "renku_data_services/authz", from = "../../components" },
  { include = "renku_data_services/storage", from = "../../components" },
  { include = "renku_data_services/namespace", from = "../../components" },
  { include = "renku_data_services/utils", from = "../../components" },
  { include = "renku_data_services/secrets", from = "../../components" },
  { include = "renku_data_services/authn", from = "../../components" },
  { include = "renku_data_services/app_config", from = "../../components" },
  { include = "renku_data_services/git", from = "../../components" },
  { include = "renku_data_services/connected_services", from = "../../components" },
  { include = "renku_data_services/repositories", from = "../../components" },
  { include = "renku_data_services/session", from = "../../components" },
  { include = "renku_data_services/migrations", from = "../../components" },
]

[tool.poetry.dependencies]
python = "^3.12"
alembic = "^1.13.2"
pydantic = {extras = ["email"], version = "^2.8.2"}
requests = "^2.32.3"
sqlalchemy = "^2.0.31"
asyncpg = "^0.29.0"
sanic-ext = "^23.6.0"
psycopg = { extras = ["binary"], version = "^3.2.1" }
authlib = "^1.3.1"
sanic = { extras = ["ext"], version = "^24.6.0" }
redis = "^5.0.7"
dataclasses-avroschema = "^0.61.0"
undictify = "^0.11.3"
tenacity = "^8.5.0"
httpx = "<0.28"
python-gitlab = "^4.7.0"
pyjwt = { extras = ["crypto"], version = "^2.6.0" }
kubernetes = "^30.1.0"
python-ulid = "^2.7.0"
deepmerge = "^1.1.0"
authzed = "^0.16.0"
prometheus-sanic = "^3.0.0"
sentry-sdk = { version = "^2.10.0", extras = ["sanic"] }
# see https://github.com/sanic-org/sanic/issues/2828 for setuptools dependency, remove when not needed anymore
setuptools = { version = "^70.3.0" }

[tool.poetry.group.dev.dependencies]
pyavro-gen = "^0.3.3"
fakeredis = "^2.23.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
