[tool.poetry]
name = "keycloak_sync"
version = "0.1.0"
description = ""
authors = ['Swiss Data Science Center <contact@datascience.ch>']
license = ""

packages = [
  { include = "renku_data_services/keycloak_sync", from = "../../bases" },
  { include = "renku_data_services/users", from = "../../components" },
  { include = "renku_data_services/users_migrations", from = "../../components" },
  { include = "renku_data_services/errors", from = "../../components" },
  { include = "renku_data_services/base_api", from = "../../components" },
  { include = "renku_data_services/base_models", from = "../../components" },
  { include = "renku_data_services/migrations", from = "../../components" },
]

[tool.poetry.dependencies]
python = "^3.11"
alembic = "^1.12.1"
pydantic = "^2.5.2"
requests = "^2.31.0"
sqlalchemy = "^2.0.23"
asyncpg = "^0.29.0"
sanic-ext = "^23.6.0"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
